
plugins {
   id 'java'
   id 'maven-publish'
}

description = 'weaver connector'

base {
    archivesName = 'weaver'
}

jar {
    archiveBaseName = 'weaver'
}

javadoc {
    source = sourceSets.main.java
    exclude "org/weaverdb/sample/**"
    exclude "org/weaverdb/base/WeaverReferenceFactory17.java"
    exclude "org/weaverdb/WeaverCmdLine.java"
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.drewnoakes:metadata-extractor:2.19.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

jar {
    manifest {
        attributes (
            "Runtime-Version": Runtime.version(),
            "Language-Version": project.java.toolchain.languageVersion
        )
    }
}

tasks.named('test', Test) {
    useJUnitPlatform()

    // Native libs are produced by the top-level CMake build (mkdir build; cmake ...).
    systemProperty 'java.library.path', rootProject.file('build/mtpg/lib').absolutePath

    maxHeapSize = '1G'
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    }

    jvmArgs '-verbose:jni', '--enable-native-access=ALL-UNNAMED'
    testLogging {
        events "passed"
    }
}

tasks.register('printClasspath') {
    doLast {
        configurations.testRuntimeClasspath.each { println it }
    }
}

tasks.register('printJavaVersion') {
    doLast {
        println "Java Toolchain Version: ${java.toolchain.languageVersion.get()}"
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.weaverdb'
            version = '1.0.2'
            artifactId = 'weaverdb'
            from components.java
        }
    }
    repositories {
        maven {
            name = "myrepo"
            url = layout.projectDirectory.dir('repo')
        }
    }
}
